[package]
name = "actix-file-adapter-rbac"
version = "0.1.0"
authors = ["Chojan Shang <psiace@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-rt = "2.7.0"
casbin = "2.0.9"
dotenv = "0.15"
loge = {version = "0.4", default-features = false, features = ["colored", "chrono"]}